<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_searchRecipe"
            android:icon="@drawable/icon_recipe_search"
            android:title="@string/recipe_search" />
        <item
            android:id="@+id/nav_recipeShown"
            android:icon="@drawable/icon_recipe_shown"
            android:title="내가 본 레시피"/>
        <item
            android:id="@+id/nav_postRecipe"
            android:icon="@drawable/icon_recipe_put"
            android:title="@string/recipe_add" />
        <item
            android:id="@+id/nav_recipePosted"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="내가 작성한 레시피" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/logout" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
