<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <LinearLayout
        android:id="@+id/post_ll_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/post_ll_recipetitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipetitle"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/post_edt_recipetitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/recipetitlehint"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/post_ll_recipeinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipeinfo"
                android:textSize="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/serve"
                    android:layout_weight="0.5"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/post_edt_serve"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/servehint"
                    android:layout_weight="0.5"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/timecost"
                    android:layout_weight="0.5"
                    android:textSize="18dp"/>

                <EditText
                    android:id="@+id/post_edt_timecost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/timecosthint"
                    android:layout_weight="0.5"/>

            </LinearLayout>




        </LinearLayout>

        <LinearLayout
            android:id="@+id/post_ll_ingredientlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ingredient"
                    android:textSize="20dp"
                    android:layout_weight="0.25"/>

                <Button
                    android:id="@+id/post_btn_addingredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:text="@string/addingredient" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/post_ll_ingredientname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/post_edt_ingre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ingredienthint"
                        android:singleLine="true"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/post_ll_ingredientquan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/post_edt_quan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/quantityhint"
                        android:singleLine="true"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/post_ll_delingredientbutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                </LinearLayout>




            </LinearLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/steporder"
                    android:textSize="20dp"
                    android:layout_weight="0.25"/>

                <Button
                    android:id="@+id/post_btn_addsteps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:text="@string/addstep" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/post_ll_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/post_edt_step"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/stephint"
                        android:layout_weight="1"/>



                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">


            <Button
                android:id="@+id/post_btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"/>

        </LinearLayout>

    </LinearLayout>





</ScrollView>