<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:background="@drawable/nav_header_background"
    android:gravity="bottom"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/Navigation_profile_image"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_weight="0.75"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_marginRight="10dp"
        android:src="@drawable/border_image"/>


    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="87dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Navigation_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Navigation_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nav_header_subtitle"
            android:textAllCaps="false"
            android:textColor="#FFFFFFFF"
            android:textSize="13dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
